--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "react": "^17.0.2",
