--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "name": "remix-app-template",
   "description": "",
   "license": "",
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
+  },
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -i ./styles/global.css -o ./app/tailwind.css --minify",
@@ -13,6 +16,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@prisma/client": "^3.8.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "react": "^17.0.2",
@@ -24,6 +28,8 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "concurrently": "^7.0.0",
+    "esbuild-register": "^3.3.2",
+    "prisma": "^3.8.1",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.1.2"
   },
